# learn_python

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  COMMENTS.md  LICENCE  PACKAGING.md  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml  testrun.py
.devcontainer/: README.md  devcontainer.json  setup.sh
notebooks/: cpu_training.ipynb  gpu_training.ipynb  net_GPU.ipynb  training.ipynb
src/: train.py  utils.py
src/torch_practice/: dataloading.py  default_config.py  loading.py  loading_test.py  logging.py  main_types.py  nn_arch.py  profiling.py  saving.py  saving_test.py  simple_train.py  trainer.py  tuner.py  utils.py
src/torch_practice/HP_tune_autoencoder/: gradient_analysis.py  main_types.py  nn_arch.py  simple_train.py  trainer.py  tuner.py
src/torch_practice/HP_tune_classifier/: main_types.py  nn_arch.py  trainer.py  tuner.py
src/torch_practice/nn_arch/: create_nn_layers.py  nn_arch.py
src/torch_practice/scripts/: README.md  parts.py  profile.py  show_reconstruction.py  summary.py  train.py  vis.py
src/torch_practice/tensor_vis/: board.py
src/torch_practice/toy_test_autocast/: test.py
src/torch_practice/utils/: date_format.py  device.py  device_test.py  get_device.py  get_device_available.py  get_device_test.py  gradient.py  gradient_analysis.py  io.py  io_test.py  logging.py  pp_dict.py  profiling.py  reload_state.py  save_model.py  seed_worker.py  show_reconstruction.py  to_device_available.py  track_loss.py
src/torch_practice/visualise_cifar_samples/: vis.py
