# example https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "torch_practice"
version = "0.0.1"
description = "Practice Pytorch, Ray, and packaging."
authors = [{ name = " Santiago Miranda", email = "santimir.me@gmail.com" }]
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.10"
keywords = ["sample project", "pytorch", "ray"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Unix",
]


dependencies = [
    "matplotlib>=3.9.2",
    "ray[train,tune]>=2.39.0",
    "tensorboard>=2.18.0",
    "torchinfo>=1.8.0",
]

[project.optional-dependencies]
cpu = ["torch>=2.5.1", "torchvision>=0.20.1"]
cu124 = ["torch>=2.5.1", "torchvision>=0.20.1"]

[project.urls]
Homepage = "https://github.com/ghsanti/learn_python"
Repository = "https://github.com/ghsanti/learn_python"
Issues = "https://github.com/ghsanti/learn_python/issues"
Documentation = "https://readthedocs.org"
Changelog = "https://github.com/ghsanti/learn_python/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/torch_practice"]
# Exclude any files ending with '_test.py'
exclude = ["*_test.py"]

# dev dependencies. --dev or use --group name for other groups.
[dependency-groups]
dev = [ # advantage: 'dev' is synced by default. `uv add --dev pkgname`
    "coverage>=7.6.9",
    "pre-commit>=4.0.1",
    "pyright>=1.1.390",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu124" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'" },
    { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'" },
    { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
